# BeerOverflow

./: .env.example  .gitignore  FaceRecognition.py  Procfile  README.md  bank.db  config.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test-ssl.sh  voice_server.py  whisper-endpoint.py
app/: FaceRecognition.py  __init__.py  models.py
app/frontend/: .gitignore  package-lock.json  package.json
app/frontend/src/: App.vue
app/main/: routes.py
app/static/: scripts.js  styles.css  styles_forms.css
backend/: Dockerfile  banking_qa.db  config.py  requirements.txt  run.py  sample_transaction.json  start.sh  wsgi.py
backend/app/: FaceRecognition.py  FaceRecognitionHandler.py  __init__.py  models.py
doc_analysis/: Dockerfile  README.md  pyproject.toml  requirements.txt
doc_analysis/src/: config.py  debugging.py  groq_client.py  main.py  ner_extraction.py  pipeline.py  vector_store.py
face_recognition/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  README.md  docker-entrypoint.sh  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  router.js
images/: IMG_6532.HEIC  IMG_6544.HEIC
migrations/: env.py
src/: banking_qa.db  cli.py  config.py  debugging.py  embeddings.py  groq_client.py  ner_extraction.py  pdf_ingest.py  pipeline.py  products.py  vector_store.py
static/: scripts.js
templates/: test.html
whisper_endpoint/: Dockerfile  id.csv  id_matching.py  requirements.txt  run.bat  whisper-endpoint.py
(+84 files in other folders)
