[project]
name = "llm_terms_and_conditions"
version = "0.1.0"
description = ""
authors = [
    {name = "Weronika",email = "251661@edu.p.lodz.pl"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pypdf (>=6.2.0,<7.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "groq (>=0.34.0,<0.35.0)",
    "stable-ts (>=2.19.1,<3.0.0)",
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-migrate (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
